feat: continius update client
